fixes some layout issues

--- a/src/styles/layout/_layout.base.scss
+++ b/src/styles/layout/_layout.base.scss
@@ -1,6 +1,5 @@
 .layout--left {
   float: left;
-  border: 0;
 }
 
 .layout--right {
